--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -59,7 +59,7 @@
 
 $color: #0cf;
 
-.button {
+button {
   display: inline-block;
   padding: .75rem 1.25rem;
   border-radius: 10rem;
@@ -70,6 +70,9 @@ $color: #0cf;
   transition: all .3s;
   position: relative;
   overflow: hidden;
+  outline: none;
+  border: none;
+  cursor: pointer;
   z-index: 1;
   &:after {
     content: '';
@@ -102,32 +105,26 @@ $color: #0cf;
   }
 }
 
-/* optional reset for presentation */
-* {
-  font-family: Arial;
-  text-decoration: none;
-  font-size: 20px;
-}
-.container {
-  padding-top: 50px;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
 h1 {
-  text-transform: uppercase;
-  font-size: .8rem;
-  margin-bottom: 2rem;
-  color: #777;
+  color: aqua;
 }
-span {
-  display: block;
-  margin-top: 2rem;
-  font-size: .7rem;
-  color: #777;
-  a {
-    font-size: .7rem;
-    color: #999;
-    text-decoration: underline;
+
+h1 div {
+  color: red
+}
+
+h1 div span {
+  color:aliceblue;
+}
+
+h1 {
+  color: aqua;
+  div{ 
+    color: red;
+    span {
+      color:aliceblue;
+    }
   }
 }
+
+
