--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -104,27 +104,30 @@ button {
     }
   }
 }
-
-h1 {
-  color: aqua;
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
 }
-
-h1 div {
-  color: red
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
-
-h1 div span {
-  color:aliceblue;
-}
-
-h1 {
-  color: aqua;
-  div{ 
-    color: red;
-    span {
-      color:aliceblue;
-    }
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
+
 
 
