--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -74,6 +74,7 @@ button {
   border: none;
   cursor: pointer;
   z-index: 1;
+  margin: 6px;
   &:after {
     content: '';
     position: absolute;
