--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -159,5 +159,15 @@ button.red {
   }
 }
 
+svg {
+  width: 30px;
+  height: 30px;
+  fill: crimson;
+}
+
+.kitas-svg:hover {
+  transform: rotate(90deg);
+}
+
 
 
