--- a/r1/src/App.scss
+++ b/r1/src/App.scss
@@ -51,9 +51,10 @@
 
 .kvc {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  min-width: 90vw; 
 }
 
 
