--- a/r2/src/crud.scss
+++ b/r2/src/crud.scss
@@ -40,3 +40,15 @@ body {
     width: 100%;
     justify-content: flex-end;
 }
+
+button.with-loader {
+    .spinner-border {
+        display: none;
+    }
+}
+
+button.with-loader:disabled {
+    .spinner-border {
+        display: inline-block;
+    }
+}
