--- a/r2/src/crud.scss
+++ b/r2/src/crud.scss
@@ -13,6 +13,12 @@ body {
             align-items: center;
             justify-content: flex-start;
         }
+        .nest-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
         .buttons {
             display: flex;
             align-items: center;
