--- a/r2/src/crud.scss
+++ b/r2/src/crud.scss
@@ -18,6 +18,11 @@ body {
             align-items: center;
             justify-content: space-between;
             width: 100%;
+            li {
+                min-width: 300px;
+                background-color: aliceblue;
+                color: pink;
+            }
         }
         .buttons {
             display: flex;
