--- a/r2/src/crud.scss
+++ b/r2/src/crud.scss
@@ -19,7 +19,46 @@ body {
             justify-content: space-between;
             width: 100%;
             li {
-                min-width: 300px;
+                background-color: aliceblue;
+                color: pink;
+            }
+        }
+        .buttons {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        }
+        b {
+            margin-right: 7px;
+        }
+        i {
+            margin-left: 7px;
+        }
+        u {
+            margin-left: 7px;
+            color: skyblue;
+        }
+    }
+}
+
+.list-group-item {
+    .item-front {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        .content {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+        }
+        .nest-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            li {
                 background-color: aliceblue;
                 color: pink;
             }
