--- a/shop/r1/src/App.scss
+++ b/shop/r1/src/App.scss
@@ -98,11 +98,16 @@ body {
 
 .show-message {
     display: flex;
-    position: fixed;
+    position: absolute;
     bottom: 50px;
-    right: 50px;
+    right: 0;
     width: 100%;
     justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+    div {
+        width: 50%;
+    }
 }
 
 button.with-loader {
